--- a/css/map-styles.css
+++ b/css/map-styles.css
@@ -14,6 +14,7 @@
     box-shadow: var(--shadow-lg);
     position: relative;
     overflow: hidden;
+    height: 100%;
 }
 
 .map-container::before {
